--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sass-loader": "^10.0.5",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.0.3",
+    "url-loader": "^4.1.1",
     "webpack-dev-server": "^3.7.2"
   }
 }
